[package]
name = "rci-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
config = "0.14.1"
serde = { version = "1.0.215", features = ["derive"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"

tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "registry",
    "env-filter",
] }
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
actix-rt = "2.10.0"
once_cell = "1.20.2"
reqwest = "0.12.9"
tokio = "1.41.1"
